--- a/finance-control-mearn/index.html
+++ b/finance-control-mearn/index.html
@@ -21,6 +21,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
