Removed payment integration with stripe

--- a/finance-control-mern/index.html
+++ b/finance-control-mern/index.html
@@ -2,6 +2,11 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <!-- This description will be seen at search engine results! -->
+    <meta
+      name="description"
+      content="Uma ferramenta essencial para manter o seu equilíbrio financeiro em dia!"
+    />
     <title>Equilíbrio Financeiro</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
